After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 345203 - Might crash when used in HAL-enabled apps
Might crash when used in HAL-enabled apps
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
Old
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2006-06-17 23:01 UTC by Bastien Nocera
Modified: 2008-06-03 17:39 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2006-06-17 23:01:50 UTC
The application using HAL might crash with:
 #1  0x0019d4a7 in dbus_connection_dispatch () from /lib/libdbus-1.so.2
 #2  0x00a9210d in dbus_server_setup_with_g_main ()
 from /usr//lib/libdbus-glib-1.so.2
 #3  0x00c1109d in g_main_context_dispatch ()
 from /usr//lib/libglib-2.0.so.0
 #4  0x00c1432f in g_main_context_check ()
 from /usr//lib/libglib-2.0.so.0
 #5  0x00c146d9 in g_main_loop_run () from /usr//lib/libglib-2.0.so.0
 #6  0x029d2594 in gtk_main () from /usr//lib/libgtk-x11-2.0.so.0
 #7  0x0806d2f5 in main (argc=1, argv=0xbfd88f64) at main.c:375

See:
http://thread.gmane.org/gmane.comp.freedesktop.hal/5373/focus=5373

There's a work-around in Totem now, that should be removed:
cd_cache_new_hal_ctx() in totem-disc.c
Comment 1 Bastien Nocera 2006-09-30 16:07:09 UTC
2006-09-30  Bastien Nocera  <hadess@hadess.net>

        * configure.in: update dbus requirement to 0.61 for the HAL 0.5 case
        * src/plparse/totem-disc.c: (cd_cache_new_hal_ctx):
        Remove work-around for bug #345203 (Closes: #345203)
Comment 2 Philip Withnall 2008-06-03 17:39:44 UTC
Mass-move from totem to totem-pl-parser. You can remove all messages by searching for this comment.